arr/jfa-go/jfa-go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jfa-go
  namespace: arr
  labels:
    app.kubernetes.io/name: jfa-go
    app.kubernetes.io/part-of: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jfa-go
      app.kubernetes.io/part-of: arr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jfa-go
        app.kubernetes.io/part-of: arr
    spec:
      containers:
        - name: jfa-go
          image: hrfee/jfa-go:latest
          ports:
            - containerPort: 8056
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: jfa-go
