arr/jfa-go/jfa-go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jfa-go
  namespace: arr
  labels:
    app.kubernetes.io/name: jfa-go
    app.kubernetes.io/part-of: arr
spec:
  selector:
    app.kubernetes.io/name: jfa-go
    app.kubernetes.io/part-of: arr
  ports:
    - protocol: TCP
      port: 8056
      targetPort: 8056
