arr/jfa-go/jfa-go-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jfa-go
  namespace: arr
  labels:
    app.kubernetes.io/name: jfa-go
    app.kubernetes.io/part-of: arr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`account.flexflix.top`)
      kind: Rule
      services:
        - name: jfa-go
          port: 8056
